package decoupling.levels.level5.service;

public class ServiceAImpl implements ServiceA {

    @Override
    public int featureA() {
        return 0;
    }
}
