package decoupling.levels.level6_3.service;

public class ServiceAProvider implements ServiceA {

    @Override
    public int featureA() {
        return 0;
    }
}
