package decoupling.levels.level4;

public class ServiceImpl implements Service {

    @Override
    public int featureA() {
        return 0;
    }

    @Override
    public int featureB(){return  1;}
}
