package com.olexyn.about.java.design.patterns.creational;

/*
 * Prototype.
 * Specify the kinds of objects to create using a prototypical instance,
 * and create new objects by copying this prototype.
 */

public class Prototype {

}
