package com.olexyn.about.java.design.patterns.structural;

/*
 * Adapter.
 * Convert the interface of a class into another interface clients expect.
 * Adapter lets classes work together that couldn't otherwise because of incompatible interfaces.
 */


public class Adapter {


       /*
    When 2 interfaces are not compatible with each other
    and want to make establish a relationship between them through an adapter its called adapter design pattern.
    Adapter pattern converts the interface of a class into another interface
    or classes the client expects that is adapter lets classes works together
    that could not otherwise because of incompatibility.
    so in these type of incompatible scenarios, we can go for the adapter pattern.
     */
}
