package com.olexyn.about.java.design.patterns.structural;

/*
 * Bridge.
 * Decouple an abstraction from its implementation
 * so that the two can vary independently.
 */


public class Bridge {

}
