@startuml

title __15-DESIGN's Class Diagram__\n

  namespace decoupling.levels.level1 {
    class decoupling.levels.level1.Consumer {
    }
  }
  

  namespace decoupling.levels.level1 {
    class decoupling.levels.level1.Main {
    }
  }
  

  namespace decoupling.levels.level1 {
    class decoupling.levels.level1.Service {
    }
  }
  

  namespace decoupling.levels.level2 {
    class decoupling.levels.level2.Consumer {
    }
  }
  

  namespace decoupling.levels.level2 {
    class decoupling.levels.level2.Main {
    }
  }
  

  namespace decoupling.levels.level2 {
    class decoupling.levels.level2.Service {
    }
  }
  

  namespace decoupling.levels.level2 {
    class decoupling.levels.level2.ServiceA {
    }
  }
  

  namespace decoupling.levels.level2 {
    class decoupling.levels.level2.ServiceB {
    }
  }
  

  namespace decoupling.levels.level3 {
    class decoupling.levels.level3.Consumer {
    }
  }
  

  namespace decoupling.levels.level3 {
    class decoupling.levels.level3.Main {
    }
  }
  

  namespace decoupling.levels.level3 {
    class decoupling.levels.level3.Service {
    }
  }
  

  namespace decoupling.levels.level3 {
    class decoupling.levels.level3.ServiceA {
    }
  }
  

  namespace decoupling.levels.level3 {
    class decoupling.levels.level3.ServiceB {
    }
  }
  

  namespace decoupling.levels.level4 {
    interface decoupling.levels.level4.Consumer {
    }
  }
  

  namespace decoupling.levels.level4 {
    class decoupling.levels.level4.ConsumerImpl {
    }
  }
  

  namespace decoupling.levels.level4 {
    class decoupling.levels.level4.Main {
    }
  }
  

  namespace decoupling.levels.level4 {
    interface decoupling.levels.level4.Service {
    }
  }
  

  namespace decoupling.levels.level4 {
    class decoupling.levels.level4.ServiceImpl {
    }
  }
  

  namespace decoupling.levels.level5 {
    interface decoupling.levels.level5.Consumer {
    }
  }
  

  namespace decoupling.levels.level5 {
    class decoupling.levels.level5.ConsumerImpl {
    }
  }
  

  namespace decoupling.levels.level5 {
    class decoupling.levels.level5.Main {
    }
  }
  

  namespace decoupling.levels.level5 {
    namespace service {
      interface decoupling.levels.level5.service.ServiceA {
      }
    }
  }
  

  namespace decoupling.levels.level5 {
    namespace service {
      class decoupling.levels.level5.service.ServiceABImpl {
      }
    }
  }
  

  namespace decoupling.levels.level5 {
    namespace service {
      class decoupling.levels.level5.service.ServiceAImpl {
      }
    }
  }
  

  namespace decoupling.levels.level5 {
    namespace service {
      interface decoupling.levels.level5.service.ServiceB {
      }
    }
  }
  

  namespace decoupling.levels.level6_1 {
    interface decoupling.levels.level6_1.Consumer {
    }
  }
  

  namespace decoupling.levels.level6_1 {
    class decoupling.levels.level6_1.ConsumerImpl {
    }
  }
  

  namespace decoupling.levels.level6_1 {
    class decoupling.levels.level6_1.Main {
    }
  }
  

  namespace decoupling.levels.level6_1 {
    namespace service {
      interface decoupling.levels.level6_1.service.ServiceA {
      }
    }
  }
  

  namespace decoupling.levels.level6_1 {
    namespace service {
      class decoupling.levels.level6_1.service.ServiceABImpl {
      }
    }
  }
  

  namespace decoupling.levels.level6_1 {
    namespace service {
      class decoupling.levels.level6_1.service.ServiceAImpl {
      }
    }
  }
  

  namespace decoupling.levels.level6_1 {
    namespace service {
      interface decoupling.levels.level6_1.service.ServiceB {
      }
    }
  }
  

  namespace decoupling.levels.level6_2 {
    interface decoupling.levels.level6_2.Consumer {
    }
  }
  

  namespace decoupling.levels.level6_2 {
    class decoupling.levels.level6_2.ConsumerImpl {
    }
  }
  

  namespace decoupling.levels.level6_2 {
    class decoupling.levels.level6_2.Main {
    }
  }
  

  namespace decoupling.levels.level6_2 {
    namespace service {
      interface decoupling.levels.level6_2.service.ServiceA {
      }
    }
  }
  

  namespace decoupling.levels.level6_2 {
    namespace service {
      class decoupling.levels.level6_2.service.ServiceABImpl {
      }
    }
  }
  

  namespace decoupling.levels.level6_2 {
    namespace service {
      class decoupling.levels.level6_2.service.ServiceAImpl {
      }
    }
  }
  

  namespace decoupling.levels.level6_2 {
    namespace service {
      interface decoupling.levels.level6_2.service.ServiceB {
      }
    }
  }
  

  namespace decoupling.levels.level6_3 {
    interface decoupling.levels.level6_3.Consumer {
    }
  }
  

  namespace decoupling.levels.level6_3 {
    class decoupling.levels.level6_3.ConsumerImpl {
    }
  }
  

  namespace decoupling.levels.level6_3 {
    class decoupling.levels.level6_3.Main {
    }
  }
  

  namespace decoupling.levels.level6_3 {
    namespace service {
      interface decoupling.levels.level6_3.service.ServiceA {
      }
    }
  }
  

  namespace decoupling.levels.level6_3 {
    namespace service {
      class decoupling.levels.level6_3.service.ServiceABImpl {
      }
    }
  }
  

  namespace decoupling.levels.level6_3 {
    namespace service {
      class decoupling.levels.level6_3.service.ServiceAProvider {
      }
    }
  }
  

  namespace decoupling.levels.level6_3 {
    namespace service {
      interface decoupling.levels.level6_3.service.ServiceB {
      }
    }
  }
  

  namespace decoupling.levels.level7 {
    interface decoupling.levels.level7.Consumer {
    }
  }
  

  namespace decoupling.levels.level7 {
    class decoupling.levels.level7.ConsumerImpl {
    }
  }
  

  namespace decoupling.levels.level7 {
    class decoupling.levels.level7.Main {
    }
  }
  

  namespace decoupling.levels.level7 {
    namespace injector {
      interface decoupling.levels.level7.injector.Injector {
      }
    }
  }
  

  namespace decoupling.levels.level7 {
    namespace injector {
      class decoupling.levels.level7.injector.ServiceABInjector {
      }
    }
  }
  

  namespace decoupling.levels.level7 {
    namespace injector {
      class decoupling.levels.level7.injector.ServiceAInjector {
      }
    }
  }
  

  namespace decoupling.levels.level7 {
    namespace service {
      interface decoupling.levels.level7.service.ServiceA {
      }
    }
  }
  

  namespace decoupling.levels.level7 {
    namespace service {
      class decoupling.levels.level7.service.ServiceABImpl {
      }
    }
  }
  

  namespace decoupling.levels.level7 {
    namespace service {
      class decoupling.levels.level7.service.ServiceAProvider {
      }
    }
  }
  

  namespace decoupling.levels.level7 {
    namespace service {
      interface decoupling.levels.level7.service.ServiceB {
      }
    }
  }
  

  namespace patterns.behavioural {
    interface patterns.behavioural.Aggregate {
    }
  }
  

  namespace patterns.behavioural {
    class patterns.behavioural.ChainofResponsibility {
    }
  }
  

  namespace patterns.behavioural {
    class patterns.behavioural.Command {
    }
  }
  

  namespace patterns.behavioural {
    class patterns.behavioural.ConcreteAggregate {
    }
  }
  

  namespace patterns.behavioural {
    class patterns.behavioural.ConcreteIterator {
    }
  }
  

  namespace patterns.behavioural {
    class patterns.behavioural.ConcreteObserver {
    }
  }
  

  namespace patterns.behavioural {
    class patterns.behavioural.ConcreteSubject {
    }
  }
  

  namespace patterns.behavioural {
    class patterns.behavioural.CreditCardStrategy {
    }
  }
  

  namespace patterns.behavioural {
    class patterns.behavioural.Element {
    }
  }
  

  namespace patterns.behavioural {
    class patterns.behavioural.Interpreter {
    }
  }
  

  namespace patterns.behavioural {
    class patterns.behavioural.Item {
    }
  }
  

  namespace patterns.behavioural {
    interface patterns.behavioural.Iterator {
    }
  }
  

  namespace patterns.behavioural {
    class patterns.behavioural.IteratorDemo {
    }
  }
  

  namespace patterns.behavioural {
    abstract class patterns.behavioural.Lvl1 {
    }
  }
  

  namespace patterns.behavioural {
    class patterns.behavioural.Lvl2 {
    }
  }
  

  namespace patterns.behavioural {
    class patterns.behavioural.Mediator {
    }
  }
  

  namespace patterns.behavioural {
    class patterns.behavioural.Memento {
    }
  }
  

  namespace patterns.behavioural {
    abstract class patterns.behavioural.Observer {
    }
  }
  

  namespace patterns.behavioural {
    class patterns.behavioural.ObserverDemo {
    }
  }
  

  namespace patterns.behavioural {
    interface patterns.behavioural.PaymentStrategy {
    }
  }
  

  namespace patterns.behavioural {
    class patterns.behavioural.PaypalStrategy {
    }
  }
  

  namespace patterns.behavioural {
    class patterns.behavioural.State {
    }
  }
  

  namespace patterns.behavioural {
    class patterns.behavioural.StrategyDemo {
    }
  }
  

  namespace patterns.behavioural {
    abstract class patterns.behavioural.Subject {
    }
  }
  

  namespace patterns.behavioural {
    class patterns.behavioural.TemplateMethodDemo {
    }
  }
  

  namespace patterns.behavioural {
    class patterns.behavioural.Visitor {
    }
  }
  

  namespace patterns.behavioural {
    class patterns.behavioural.VisitorDemo {
    }
  }
  

  namespace patterns.creational {
    class patterns.creational.AbastractFactory {
    }
  }
  

  namespace patterns.creational {
    class patterns.creational.Builder {
    }
  }
  

  namespace patterns.creational {
    abstract class patterns.creational.Factory {
    }
  }
  

  namespace patterns.creational {
    class patterns.creational.FactoryDemo {
    }
  }
  

  namespace patterns.creational {
    abstract class patterns.creational.Product {
    }
  }
  

  namespace patterns.creational {
    class patterns.creational.Prototype {
    }
  }
  

  namespace patterns.creational {
    class patterns.creational.SingletonDemo {
    }
  }
  

  namespace patterns.creational {
    class patterns.creational.cFactory {
    }
  }
  

  namespace patterns.creational {
    class patterns.creational.cProduct {
    }
  }
  

  namespace patterns.structural {
    class patterns.structural.Adapter {
    }
  }
  

  namespace patterns.structural {
    class patterns.structural.Bridge {
    }
  }
  

  namespace patterns.structural {
    interface patterns.structural.CPU {
    }
  }
  

  namespace patterns.structural {
    class patterns.structural.CPUImpl {
    }
  }
  

  namespace patterns.structural {
    class patterns.structural.CoffeeFlavour {
    }
  }
  

  namespace patterns.structural {
    class patterns.structural.CoffeeShop {
    }
  }
  

  namespace patterns.structural {
    interface patterns.structural.Component {
    }
  }
  

  namespace patterns.structural {
    class patterns.structural.Composite {
    }
  }
  

  namespace patterns.structural {
    class patterns.structural.CompositeDemo {
    }
  }
  

  namespace patterns.structural {
    interface patterns.structural.ComputerFacade {
    }
  }
  

  namespace patterns.structural {
    class patterns.structural.Flyweight {
    }
  }
  

  namespace patterns.structural {
    interface patterns.structural.Image {
    }
  }
  

  namespace patterns.structural {
    class patterns.structural.Leaf {
    }
  }
  

  namespace patterns.structural {
    interface patterns.structural.MB {
    }
  }
  

  namespace patterns.structural {
    class patterns.structural.MBImpl {
    }
  }
  

  namespace patterns.structural {
    interface patterns.structural.Order {
    }
  }
  

  namespace patterns.structural {
    class patterns.structural.Proxy {
    }
  }
  

  namespace patterns.structural {
    class patterns.structural.ProxyDemo {
    }
  }
  

  namespace patterns.structural {
    interface patterns.structural.RAM {
    }
  }
  

  namespace patterns.structural {
    class patterns.structural.RAMImpl {
    }
  }
  

  namespace patterns.structural {
    class patterns.structural.Real {
    }
  }
  

  namespace patterns.structural {
    namespace decorator {
      abstract class patterns.structural.decorator.AbstractDecorator {
      }
    }
  }
  

  namespace patterns.structural {
    namespace decorator {
      class patterns.structural.decorator.BaseClass {
      }
    }
  }
  

  namespace patterns.structural {
    namespace decorator {
      class patterns.structural.decorator.ConcreteDecorator1 {
      }
    }
  }
  

  namespace patterns.structural {
    namespace decorator {
      class patterns.structural.decorator.ConcreteDecorator2 {
      }
    }
  }
  

  namespace patterns.structural {
    namespace decorator {
      class patterns.structural.decorator.Decorator {
      }
    }
  }
  

  namespace patterns.structural {
    namespace decorator {
      interface patterns.structural.decorator.Interface {
      }
    }
  }
  

  decoupling.levels.level2.ServiceA -up-|> decoupling.levels.level2.Service
  decoupling.levels.level2.ServiceB -up-|> decoupling.levels.level2.Service
  decoupling.levels.level3.ServiceA -up-|> decoupling.levels.level3.Service
  decoupling.levels.level3.ServiceB -up-|> decoupling.levels.level3.Service
  decoupling.levels.level4.ConsumerImpl .up.|> decoupling.levels.level4.Consumer
  decoupling.levels.level4.ServiceImpl .up.|> decoupling.levels.level4.Service
  decoupling.levels.level5.ConsumerImpl .up.|> decoupling.levels.level5.Consumer
  decoupling.levels.level5.service.ServiceABImpl .up.|> decoupling.levels.level5.service.ServiceA
  decoupling.levels.level5.service.ServiceABImpl .up.|> decoupling.levels.level5.service.ServiceB
  decoupling.levels.level5.service.ServiceAImpl .up.|> decoupling.levels.level5.service.ServiceA
  decoupling.levels.level6_1.ConsumerImpl .up.|> decoupling.levels.level6_1.Consumer
  decoupling.levels.level6_1.ConsumerImpl o-- decoupling.levels.level6_1.service.ServiceA : serviceA
  decoupling.levels.level6_1.ConsumerImpl o-- decoupling.levels.level6_1.service.ServiceB : serviceB
  decoupling.levels.level6_1.service.ServiceABImpl .up.|> decoupling.levels.level6_1.service.ServiceA
  decoupling.levels.level6_1.service.ServiceABImpl .up.|> decoupling.levels.level6_1.service.ServiceB
  decoupling.levels.level6_1.service.ServiceAImpl .up.|> decoupling.levels.level6_1.service.ServiceA
  decoupling.levels.level6_2.ConsumerImpl .up.|> decoupling.levels.level6_2.Consumer
  decoupling.levels.level6_2.service.ServiceABImpl .up.|> decoupling.levels.level6_2.service.ServiceA
  decoupling.levels.level6_2.service.ServiceABImpl .up.|> decoupling.levels.level6_2.service.ServiceB
  decoupling.levels.level6_2.service.ServiceAImpl .up.|> decoupling.levels.level6_2.service.ServiceA
  decoupling.levels.level6_3.ConsumerImpl .up.|> decoupling.levels.level6_3.Consumer
  decoupling.levels.level6_3.ConsumerImpl o-- decoupling.levels.level6_3.service.ServiceA : serviceA
  decoupling.levels.level6_3.ConsumerImpl o-- decoupling.levels.level6_3.service.ServiceB : serviceB
  decoupling.levels.level6_3.service.ServiceABImpl .up.|> decoupling.levels.level6_3.service.ServiceA
  decoupling.levels.level6_3.service.ServiceABImpl .up.|> decoupling.levels.level6_3.service.ServiceB
  decoupling.levels.level6_3.service.ServiceAProvider .up.|> decoupling.levels.level6_3.service.ServiceA
  decoupling.levels.level7.ConsumerImpl .up.|> decoupling.levels.level7.Consumer
  decoupling.levels.level7.ConsumerImpl o-- decoupling.levels.level7.service.ServiceA : serviceA
  decoupling.levels.level7.ConsumerImpl o-- decoupling.levels.level7.service.ServiceB : serviceB
  decoupling.levels.level7.injector.ServiceABInjector .up.|> decoupling.levels.level7.injector.Injector
  decoupling.levels.level7.injector.ServiceAInjector .up.|> decoupling.levels.level7.injector.Injector
  decoupling.levels.level7.service.ServiceABImpl .up.|> decoupling.levels.level7.service.ServiceA
  decoupling.levels.level7.service.ServiceABImpl .up.|> decoupling.levels.level7.service.ServiceB
  decoupling.levels.level7.service.ServiceAProvider .up.|> decoupling.levels.level7.service.ServiceA
  patterns.behavioural.ConcreteAggregate .up.|> patterns.behavioural.Aggregate
  patterns.behavioural.ConcreteIterator .up.|> patterns.behavioural.Iterator
  patterns.behavioural.ConcreteIterator o-- patterns.behavioural.ConcreteAggregate : aggregate
  patterns.behavioural.ConcreteObserver -up-|> patterns.behavioural.Observer
  patterns.behavioural.ConcreteObserver o-- patterns.behavioural.ConcreteSubject : subject
  patterns.behavioural.ConcreteSubject -up-|> patterns.behavioural.Subject
  patterns.behavioural.CreditCardStrategy .up.|> patterns.behavioural.PaymentStrategy
  patterns.behavioural.Lvl2 -up-|> patterns.behavioural.Lvl1
  patterns.behavioural.PaypalStrategy .up.|> patterns.behavioural.PaymentStrategy
  patterns.creational.cFactory -up-|> patterns.creational.Factory
  patterns.creational.cProduct -up-|> patterns.creational.Product
  patterns.structural.CPUImpl .up.|> patterns.structural.CPU
  patterns.structural.Composite .up.|> patterns.structural.Component
  patterns.structural.Leaf .up.|> patterns.structural.Component
  patterns.structural.MBImpl .up.|> patterns.structural.MB
  patterns.structural.Proxy .up.|> patterns.structural.Image
  patterns.structural.RAMImpl .up.|> patterns.structural.RAM
  patterns.structural.Real .up.|> patterns.structural.Image
  patterns.structural.decorator.AbstractDecorator .up.|> patterns.structural.decorator.Interface
  patterns.structural.decorator.AbstractDecorator o-- patterns.structural.decorator.Interface : wrapped
  patterns.structural.decorator.BaseClass .up.|> patterns.structural.decorator.Interface
  patterns.structural.decorator.ConcreteDecorator1 -up-|> patterns.structural.decorator.AbstractDecorator
  patterns.structural.decorator.ConcreteDecorator2 -up-|> patterns.structural.decorator.AbstractDecorator


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
